--- a/DatingApp.API/DatingApp-SPA/package.json
+++ b/DatingApp.API/DatingApp-SPA/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "boostrap": "^2.0.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "fonticon": "0.0.7",
+    "font-awesome": "^4.7.0",
+    "install": "^0.12.1",
+    "npm": "^6.4.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
